--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
-theme: hyde
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+
+title: Triggered
+description: Thoughts, musings, and asides of a corporate IT guy away from home
